# ALTAR

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/minimal/: CMakeLists.txt  minimal.c
include/: ALTAR.h
include/ALTAR/: ALTAR.h
src/: CMakeLists.txt
src/core/: core.h  main.c  window.h
src/utils/: error.c  error.h  files.c  files.h  highresclock.c  highresclock.h  log.c  log.h  memory.c  memory.h
